# music-upgrader

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini.example  logging.json.example  pyproject.toml
music_upgrader/: applescript.py  db.py  main.py  processors.py  settings.py  tracks.py
scripts/: load_all.applescript
tests/: test_lookups.py  test_processors.py  test_tracks.py
