[tool.poetry]
name = "music-upgrader"
version = "0.1.0"
description = ""
authors = ["Joel Cochran <joel@cochrandigital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mutagen = "^1.47.0"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
