[tool.poetry]
name = "music-upgrader"
version = "0.1.0"
description = "Upgrade the track files for Apple Music/iTunes via a Beets music collection"
authors = ["Joel Cochran <joel@cochrandigital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mutagen = "^1.47.0"
python-dateutil = "^2.9.0.post0"
beets = "^2.0.0"
inflection = "^0.5.1"
rich = "^13.8.0"
click = "^8.1.7"
pyyaml = "^6.0.2"
discogs-client = "^2.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
beets-yearfixer = "^0.0.5"
pylast = "^5.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.5.7"


[tool.poetry.group.beets.dependencies]
pillow = "^11.0.0"
# Ideally, discogs would go here too

[tool.poetry.scripts]
mup = "music_upgrader.main:cli"

[tool.black]
line-length = 96
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 96
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
